<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Acitivties.MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/ic_man"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="@dimen/_5sdp"
        android:text="@string/titleName"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/circleImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_6sdp"
                android:layout_marginRight="@dimen/_6sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/popular_movies"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/popularShowAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/showAll"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="@dimen/_12sdp" />
            </RelativeLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popularRecycler"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/_7sdp"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_6sdp"
                android:layout_marginRight="@dimen/_6sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/top_rated_movies"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/topRatedShowAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/showAll"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="@dimen/_12sdp" />
            </RelativeLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/topRatedRecycler"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/_7sdp"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"/>




        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>